对项目的日志进行管理；readme中添加发布到阿里云服务器的说明